fixed toggle all button getting hidden on smallest screen size

--- a/main.css
+++ b/main.css
@@ -268,6 +268,10 @@ ul>li:nth-child(1) {
         min-width: 400.2px;
     }
 
+    #btnToggleAll img {
+        margin-left: 30%;
+        margin-right: 70%;
+    }
     .todoHeader {
         width: 400.2px;
     }
